fix(pages): use /docs + minima, add nav tabs

--- a/docs/_posts/2025-10-02-welcome.md
+++ b/docs/_posts/2025-10-02-welcome.md
@@ -1,5 +1,5 @@
 ---
-title: "Welcome to the FOSS Soft Robotics site"
+title: "Welcome to FOSS Soft Robotics"
 ---
 
-Initial scaffold is live. We’ll keep adding projects, labs, and reference material.
+We’re setting up the content skeleton—projects, research notes, media, and more.
